@@ -11,7 +11,6 @@
 		<control type="group">
     		<visible>!Window.IsVisible(sliderdialog) + ![Window.IsActive(script-XBMC-Subtitles-main.xml) | Window.IsActive(pvrguideinfo) | Window.IsActive(pvrosdchannels) | Window.IsActive(pvrosdguide) | Window.IsActive(yesnodialog) | Window.IsActive(okdialog) | Window.IsActive(progressdialog) | Window.IsActive(virtualkeyboard) | Window.IsActive(numericinput) | Window.IsActive(shutdownmenu) | Window.IsActive(osdvideosettings) | Window.IsActive(osdaudiosettings) | Window.IsActive(videobookmarks)]</visible>
     		<animation effect="fade" start="100" end="0" time="250" tween="sine" easing="inout" condition="stringcompare(Skin.String(video.seekbar.type),medium) + [[VideoPlayer.Content(LiveTV) + [Window.IsActive(fullscreeninfo) | Player.ShowInfo]] | [[!VideoPlayer.Content(LiveTV) + !IsEmpty(Window(seekbar).Property(ShowInfo))] + [[!Window.IsVisible(videoosd) + Window.IsActive(fullscreeninfo)] | Player.ShowInfo]]]">Conditional</animation>
-			<animation effect="fade" start="100" end="5" time="200" condition="stringcompare(Skin.String(video.seekbar.type),onscreen) + !IsEmpty(Window(seekbar).Property(ExtendPlot))">Conditional</animation>
 			<animation effect="slide" start="0" end="0,60" condition="stringcompare(Skin.String(video.seekbar.type),onscreen)">Conditional</animation>
 			<animation type="WindowOpen" reversible="false">
 				<effect type="slide" start="0,120" end="0" time="250" tween="sine" easing="inout"/>
@@ -245,7 +244,7 @@
 							<width>80</width>
 							<texturefocus>osd/fullscreen/buttons/info-fo.png</texturefocus>
 							<texturenofocus>osd/fullscreen/buttons/info-nofo.png</texturenofocus>
-							<onclick condition="[stringcompare(Skin.String(video.seekbar.type),small) | !Player.ShowInfo]"> Action(Info)</onclick>
+							<onclick condition="[stringcompare(Skin.String(video.seekbar.type),small) | !Player.ShowInfo]">Action(Info)</onclick>
 							<onleft>10</onleft>
 							<onright>9</onright>
 							<include>OSDOnUpDown</include>
